# midi-keyboard-pico

./: .gitignore  CLAUDE.md  CMakeLists.txt  DEBUG_GUIDE.md  environment.yml  find_device.sh  monitor_serial.sh
docs/: KEYBOARD_IMPLEMENTATION.md  USB_EXPLANATION.md  USB_SETTINGS_EXPLAINED.md
examples/gpio-test/: README.md  test.c
examples/initial-midi/: CMakeLists.txt  README.md  main.c
include/: note_map.h  tusb_config.h  usb_midi.h
keyboard/: CMakeLists.txt  keyboard.c
pico/project/: build.sh
src/: keyboard.c  usb_descriptors.c  usb_midi.c
test_results/: matrix_analysis.md  output.mid  test.md  test_matrix_coords.md
tools/: README.md  map_keys.py
tools/test_results/: key_mapping.json  key_mapping.md
